# crypto-portfolio

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
backend/apps/assets/: admin.py  api.py  apps.py  models.py  seed.py
backend/apps/assets/management/commands/: seed_assets.py
backend/apps/assets/migrations/: 0001_initial.py  0002_rename_assets_asse_status_7fb64f_idx_assets_asse_status_3b4017_idx.py
backend/apps/favorites/: api.py  apps.py  models.py
backend/apps/favorites/migrations/: 0001_initial.py  0002_rename_favorites_f_asset_6bdfcc_idx_favorites_f_asset_i_f28939_idx.py
backend/apps/portfolio/: api.py  models.py
backend/apps/portfolio/migrations/: 0001_initial.py  0002_rename_portfolio_por_asset_52d3de_idx_portfolio_p_asset_i_b4a56f_idx.py
backend/config/: api.py  settings.py  test_settings.py  urls.py
backend/tests/: conftest.py
backend/tests/integration/: test_assets_api.py  test_favorites_api.py  test_portfolio_api.py
backend/tests/unit/: test_asset_model.py  test_favorite_model.py  test_portfolio_model.py
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/components/: CryptoCard.vue  CryptoCardSkeleton.vue  Layout.vue
frontend/src/components/layout/: AppContainer.vue
frontend/src/components/ui/: Button.vue  EmptyState.vue  ErrorState.vue  Input.vue  Loader.vue  Skeleton.vue
frontend/src/composables/: useDebounce.ts  useFetch.ts  useInfiniteList.ts  useInfiniteListUrl.ts  useInfiniteScroll.ts
frontend/src/composables/__tests__/: useDebounce.test.ts  useFetch.test.ts  useInfiniteList.test.ts
frontend/src/modules/assets/: types.ts
frontend/src/modules/assets/api/: assets.api.ts
frontend/src/modules/assets/components/: AddToPortfolioForm.vue  AssetCard.vue  AssetHeader.vue  AssetInfo.vue  BackButton.vue  FavoriteButton.vue  InfiniteScrollContainer.vue  SearchInput.vue
frontend/src/modules/assets/pages/: AssetDetailPage.vue  AssetsPage.vue
frontend/src/modules/dashboard/pages/: DashboardPage.vue
frontend/src/modules/favorites/api/: favorites.api.ts
frontend/src/modules/favorites/pages/: FavoritesPage.vue
frontend/src/modules/portfolio/: types.ts
frontend/src/modules/portfolio/api/: portfolio.api.ts
frontend/src/modules/portfolio/components/: PortfolioItemCard.vue  PortfolioSummary.vue
frontend/src/modules/portfolio/pages/: PortfolioPage.vue
frontend/src/router/: index.ts
frontend/src/services/: cryptoService.ts  http.ts  mockData.ts
frontend/src/test/: setup.ts
frontend/src/types/: crypto.ts
frontend/src/views/: CryptoDetailView.vue  HomeView.vue  WatchlistView.vue
