[tool.poetry]
name = "crypto-portfolio-backend"
version = "1.0.0"
description = "Backend API"
authors = ["Eliabe Serafim Jr <eliabesajunior@gmail.com>"]
packages = [{ include = "apps" }]

[tool.poetry.dependencies]
python = "^3.12"

# Core
django = "^5.0"
django-ninja = "^1.2"

# Database
psycopg = { version = "^3.1", extras = ["binary"] }
dj-database-url = "^2.1"

# Utils
python-dotenv = "^1.0"

# CORS
django-cors-headers = "^4.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
black = "^24.3.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------------------
# Linting / Formatting
# ------------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]

# ------------------------------------------------------------------------------
# Testing
# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--reuse-db",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
# Use SQLite for tests (faster, no external database needed)
# pytest-django will override DATABASE_URL for tests automatically
